<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/lyt_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.codingtest.codingtest.activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/lyt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_weight="1"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <TextView
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="right"
                android:textColor="@color/textColorPrimary"
                android:layout_weight="2"
                android:text="Next"/>
        </LinearLayout>
        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:tabPadding="@dimen/tab_padding"
            app:tabIndicatorHeight="1dp"
            app:tabIndicatorColor="@color/textColorPrimary"
            android:background="@color/colorPrimary"
            app:tabTextColor="@color/textColorPrimary"
            app:tabGravity="fill"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabMode="scrollable">
            <android.support.design.widget.TabItem
                android:text="@string/tab_item_1"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />
            <android.support.design.widget.TabItem
                android:text="@string/tab_item_2"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />
            <android.support.design.widget.TabItem
                android:text="@string/tab_item_3"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />
            <android.support.design.widget.TabItem
                android:text="@string/tab_item_4"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />
            <android.support.design.widget.TabItem
                android:text="@string/tab_item_5"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:id="@+id/lyt_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lyt_header"
        android:layout_above="@+id/lyt_tab_selected"
        android:orientation="vertical">
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_below="@+id/lyt_header"
        android:layout_above="@+id/lyt_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
    <android.support.design.widget.TabLayout
        android:id="@+id/tabDots"
        android:layout_above="@+id/lyt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        tabBackground="@drawable/tab_selector"
        tabGravity="center"
        tabIndicatorHeight="5dp"/>
    <RelativeLayout
        android:id="@+id/lyt_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="2"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/colorPrimary"
            android:text="@string/text_1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:text="@string/text_2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorPrimary"
            android:text="@string/text_3"/>
    </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyt_tab_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lyt_buttons"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/tab_selected"/>
        <TextView
            android:id="@+id/tv_tab_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/tab_item_1"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyt_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/white_bg_btn"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColorPrimary"
            android:text="@string/white"/>
        <Button
            android:id="@+id/blue_bg_btn"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColorPrimary"
            android:text="@string/blue"/>
        <Button
            android:id="@+id/grey_bg_btn"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/red"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColorPrimary"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>
